--- a/.github/workflows/main_win.yml
+++ b/.github/workflows/main_win.yml
@@ -65,7 +65,12 @@ jobs:
         make clean_test test
         bin/sw_test --gtest_shuffle --gtest_random_seed=40913
 
-    - name: Unit tests (500 shuffle)
+    - name: Unit tests (seed 43986)
       run: |
         make clean_test test
-        bin/sw_test --gtest_shuffle --gtest_repeat=500
+        bin/sw_test --gtest_shuffle --gtest_random_seed=43986
+
+    - name: Unit tests (50 shuffle)
+      run: |
+        make clean_test test
+        bin/sw_test --gtest_shuffle --gtest_repeat=50
