--- a/tests/example/Input/years.in
+++ b/tests/example/Input/years.in
@@ -1,10 +1,10 @@
-#------ Input file for model time
+#---- Site location and topography
+N               # Hemisphere (N, S)
 
-# USER: years must be consistent with `weathsetup.in`, `carbon.in`,
-#       and (if used) `swcsetup.in`.
-
-1980			# First (Gregorian) calendar year of simulation
-2010			# Last (Gregorian) calendar year of simulation
-1			# First day of first year
-365			# Last day of last year (365 is equivalent to 366)
-N			# Hemisphere (N, S)
+-105.58	# longitude (degrees; W < 0; E > 0)
+				# (currently not used by simulation, but useful for site documentation)
+39.59		# latitude (degrees; N > 0; S < 0)
+1000		# elevation (m a.s.l.)
+0		# slope (degrees): no slope = 0, vertical surface = 90
+NAN		# aspect = surface azimuth angle (degrees): S=0, E=-90, N=±180, W=90;
+		# ignored if slope = 0 or aspect takes a missing value, i.e., NAN or 999
