--- a/tests/example/files.in
+++ b/tests/example/files.in
@@ -5,7 +5,7 @@
 # USER: change path and file names as suitable for own application
 
 #--- Description of a model run
-Input/years.in		# Input file for model time: start - end years
+Input/modelrun.in	# Input file for model time: start - end years
 Output/logfile.log	# Output file to which warnings, errors, and other important information is written (can also be stdout)
 
 #--- Description of simulated site
@@ -30,12 +30,12 @@ Input/carbon.in		# Input file for yearly atmospheric CO2 concentration
 #--- Description of (optional) soil moisture measurements
 Input/swcsetup.in	# Input file for settings used if soil moisture measurements should be incorporated at run time
 
+#--- Constant (between simulation runs) temporal description of the simulation
+Input/domain.in
+
 #--- Simulation outputs
 Output/			# Path for output files: / for same directory, or e.g., Output/; PROGRAMMER NOTE: This is currently the 13th position; if this changes then update function SW_Files.c/SW_F_read()
 Input/outsetup.in	# Input file that determines time periods, aggregation functions, and variables
-
-#--- Constant (between simulation runs) temporal description of the simulation
-Input/domain.in
 
 Output/sw2_daily.csv	# Output file if daily output time period was selected
 Output/sw2_weekly.csv	# Output file if weekly output time period was selected
