Add `files_nc.in` to `files.in`
- Added `files_nc.in` to `files.in` as the first file (before domain.in)
- Updated SW_F_read() to read all other file names as normal with the new addition
- SW_FileIndex gains new enumeration (eNCIn)

--- a/tests/example/files.in
+++ b/tests/example/files.in
@@ -4,6 +4,9 @@
 # All names are relative to current directory of execution
 # USER: change path and file names as suitable for own application
 
+#--- netCDF input files
+files_nc.in
+
 #--- Constant (between simulation runs) temporal description of the simulation
 Input/domain.in
 
