--- a/tests/example/files_nc.in
+++ b/tests/example/files_nc.in
@@ -1,2 +1,6 @@
 #------ Input files relating to netCDF actions
+#
+# NOTE: This file follows a key-value pair. That is, the value is only matched with the key
+# eliminating the possibility of incorrect reads due to line dependencies.
+
 Domain Input_nc/domain.nc
