Update README and user guides
- clarify usage of make targets
- clarify the compilation of the simulation executable uses a C toolchain whereas the test executable uses a C++ toolchain

--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -60,7 +60,7 @@ jobs:
         submodules: recursive
 
     - name: Generate coverage report
-      run: CC=gcc CXX=g++ GCOV=gcov make clean clean_cov cov
+      run: CXX=g++ GCOV=gcov make clean clean_cov cov
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
