--- a/tests/example/files.in
+++ b/tests/example/files.in
@@ -4,6 +4,9 @@
 # All names are relative to current directory of execution
 # USER: change path and file names as suitable for own application
 
+#--- File for netCDF-related inputs
+Input_nc/files_nc.in
+
 #--- Constant (between simulation runs) temporal description of the simulation
 Input/domain.in
 
