--- a/tests/example/Input_nc/files_nc.in
+++ b/tests/example/Input_nc/files_nc.in
@@ -1,4 +1,6 @@
 #------ Input files relating to netCDF actions
 #
-# NOTE: This file follows a key-value pair. That is, the value is only matched with the key
+# NOTE: This file follows a key-value-value triplet. That is, the value is only matched with the key
 # eliminating the possibility of incorrect reads due to line dependencies.
+
+domain domain "Input_nc/domain.nc"
