Simplify `SW_NC_create_domain_template()` interface
- Function does not need domain netCDF name - the name tested/created is `domain_template.nc`
- New define in SW_netCDF.h for `domain_template.nc`

- Remove quotation marks from `files_nc.in` around the new file path

--- a/tests/example/Input_nc/files_nc.in
+++ b/tests/example/Input_nc/files_nc.in
@@ -3,4 +3,4 @@
 # NOTE: This file follows a key-value-value triplet. That is, the value is only matched with the key
 # eliminating the possibility of incorrect reads due to line dependencies.
 
-domain domain "Input_nc/domain.nc"
+domain domain Input_nc/domain.nc
