--- a/tests/example/Input/domain.in
+++ b/tests/example/Input/domain.in
@@ -16,3 +16,12 @@ StartYear 1980                  # First (Gregorian) calendar year of simulation
 EndYear   2010                  # Last (Gregorian) calendar year of simulation
 StartDoy  1                     # First day of first year
 EndDoy    365                   # Last day of last year (365 is equivalent to 366)
+
+# Bounding box information
+crs_bbox WGS84  # Supported:
+                # Geographic - "Absent", "WGS84", "WGS 84", "EPSG:4326", "WGS_1984", "World Geodetic System 1984"
+                # Projected - "NAD83 / Conus Albers", "North American Daymet"
+xmin_bbox -112.124056
+ymin_bbox 35.694228
+xmax_bbox -109.200444
+ymax_bbox 37.193393
