--- a/tests/example/Input_nc/files_nc.in
+++ b/tests/example/Input_nc/files_nc.in
@@ -1,6 +1,8 @@
 #------ Input files relating to netCDF actions
 #
-# NOTE: This file follows a key-value-value triplet. That is, the value is only matched with the key
-# eliminating the possibility of incorrect reads due to line dependencies.
+# NOTE: This file follows a key-value-value triplet where
+#       The first value specifies the name of the variable within the netCDF.
+#       The second value is the path of the netCDF file.
+# This convention eliminates the possibility of incorrect reads due to line dependencies.
 
 domain domain Input_nc/domain.nc
