--- a/tests/example/Input_nc/attributes_nc.in
+++ b/tests/example/Input_nc/attributes_nc.in
@@ -23,16 +23,13 @@ geo_inverse_flattening          298.257223563
 
 #------ Projected CRS Attributes
 
-proj_long_name                   NAD83 / Conus Albers
-proj_grid_mapping_name           albers_conical_equal_area
-proj_crs_wkt                     PROJCS[\"NAD83 / Conus Albers\",GEOGCS[\"NAD83\",DATUM[\"North_American_Datum_1983\",SPHEROID[\"GRS 1980\",6378137,298.257222101]],PRIMEM[\"Greenwich\",0],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4269\"]],PROJECTION[\"Albers_Conic_Equal_Area\"],PARAMETER[\"latitude_of_center\",23],PARAMETER[\"longitude_of_center\",-96],PARAMETER[\"standard_parallel_1\",29.5],PARAMETER[\"standard_parallel_2\",45.5],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"5070\"]]
+proj_long_name                     NAD83 / Conus Albers
+proj_grid_mapping_name             albers_conical_equal_area
+proj_crs_wkt                       PROJCS[\"NAD83 / Conus Albers\",GEOGCS[\"NAD83\",DATUM[\"North_American_Datum_1983\",SPHEROID[\"GRS 1980\",6378137,298.257222101]],PRIMEM[\"Greenwich\",0],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4269\"]],PROJECTION[\"Albers_Conic_Equal_Area\"],PARAMETER[\"latitude_of_center\",23],PARAMETER[\"longitude_of_center\",-96],PARAMETER[\"standard_parallel_1\",29.5],PARAMETER[\"standard_parallel_2\",45.5],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH],AUTHORITY[\"EPSG\",\"5070\"]]
 proj_longitude_of_prime_meridian 0.0
-proj_semi_major_axis             6378137.0
-proj_inverse_flattening          298.257223563
-
-#------ Optional Projected CRS Attributes
-
-proj_datum                         WGS84
+proj_semi_major_axis               6378137.0
+proj_inverse_flattening            298.257222101
+proj_datum                         NAD83
 proj_units                         m
 proj_standard_parallel             29.5 45.5
 proj_longitude_of_central_meridian -96
