Calculate nc-attribute coordinate_system from other inputs
- Calculate global nc attribute "coordinate_system" from user inputs: primary CRS and provided CRS(s) -- instead of a separate user input

--- a/tests/example/Input_nc/attributes_nc.in
+++ b/tests/example/Input_nc/attributes_nc.in
@@ -8,10 +8,10 @@ title              example_title
 author             example_author
 institution        example_name
 comment            None
-coordinate_system  WGS84
 
 # Coordinate Reference System
-primary_crs geographic
+primary_crs geographic          # options: geographic, projected
+
 
 #------ Geographic CRS Attributes
 
