--- a/tests/example/Input_nc/files_nc.in
+++ b/tests/example/Input_nc/files_nc.in
@@ -6,3 +6,4 @@
 # This convention eliminates the possibility of incorrect reads due to line dependencies.
 
 domain domain Input_nc/domain.nc
+progress progress Input_nc/progress.nc
