Check required input from key-value input files
- new `set_hasKey()` marks a found key as found and warns if duplicate
- new `check_requiredKeys()` throws error if a required key was not found

- functions that process key-value input files gained two variables
* "requiredKeys" that marks which of the "possibleKeys" is required (and which are optional)
* "hasKeys" that is updated with found keys

- functions that process key-value input files now call
* `set_hasKey()` after each `key_to_id()`, and
* `check_requiredKeys()` after input file is complete

--- a/tests/example/Input_nc/attributes_nc.in
+++ b/tests/example/Input_nc/attributes_nc.in
@@ -22,7 +22,7 @@ geo_longitude_of_prime_meridian 0.0
 geo_semi_major_axis             6378137.0
 geo_inverse_flattening          298.257223563
 
-#------ Projected CRS Attributes
+#------ Projected CRS Attributes (optional)
 
 proj_long_name                     NAD83 / Conus Albers
 proj_grid_mapping_name             albers_conical_equal_area
