GHA: new step to compile SOILWAT2 with netCDF support

--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -50,6 +50,25 @@ jobs:
       run: make clean test_sanitizer
 
 
+  build_ncSW2:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v3
+      with:
+        submodules: recursive
+
+    - name: Install netCDF-C
+      run: |
+        sudo apt-get update
+        sudo apt-get install libnetcdf-dev
+
+    - name: Build binary with netCDF support
+      run: CPPFLAGS=-DSWNETCDF make clean all
+
+
+
   check_code_coverage:
     runs-on: ubuntu-latest
 
