--- a/tests/example/files.in
+++ b/tests/example/files.in
@@ -6,7 +6,7 @@
 
 #--- Files for netCDF-related inputs
 Input_nc/files_nc.in
-Input_nc/attributes_nc.in
+Input_nc/desc_nc.in
 
 #--- Constant (between simulation runs) temporal description of the simulation
 Input/domain.in
