--- a/tests/example/Input/domain.in
+++ b/tests/example/Input/domain.in
@@ -19,5 +19,5 @@ EndDoy    365                   # Last day of last year (365 is equivalent to 36
 
 SpinupMode      1               # Mode ( 1: repeated random resample; 2: sequence of m years ), default = 1
 SpinupScope     1               # Scope ( N ): use first N years of simulation, default = 1
-SpinupDuration  0               # Duration ( M ): sample M years of the first N years, default = 0
+SpinupDuration  0               # Duration ( M ): sample M years of the first N years (no spinup: M = 0), default = 0
 SpinupSeed      11              # Seed for randomly generating years for mode 1, default = 11
