New file: SW2_netCDF_output_variables
- tab-separated value spreadsheet "SW2_netCDF_output_variables.tsv" defines output variables for netCDFs and allows (limited) user requests on a per-variable basis: do/do not output; variable name, long_name, comment, and units in netCDF
- missing rows (outkey-variable pairs) "SW2_netCDF_output_variables.tsv" turn off respective output, e.g., an empty file results in no output
- SW_NC_read_out_vars() now handles tsv-formatted file (cell content may contain commas which makes the csv format problematic)
- inject species name in long_name attribute of ESTABL output variables
- update possKeys to match values in provided spreadsheet

--- a/tests/example/Input_nc/desc_nc.in
+++ b/tests/example/Input_nc/desc_nc.in
@@ -3,6 +3,16 @@
 # NOTE: This file follows the convention of key-value pairs. That is, the value is only matched with the key eliminating the possibility of incorrect reads due to line dependencies.
 # NOTE: When writing the value for any "crs_wkt" please remove occurrences of '\' within it (when generating netCDFs, the '\' will be placed back into the attribute value).
 
+# NOTE: "SW2_netCDF_output_variables.tsv" (tab-separated values)
+#   * missing rows (outkey-variable pairs) turn off respective output
+#   * user can provide their input for fields "Do output?",
+#     "netCDF variable name", "netCDF long_name", "netCDF comment",
+#     and "netCDF units"
+#   * field "netCDF cell_method" refers to internal within-day calculation
+#   * field "User comment" is ignored
+#   * changing values of other fields leads to incorrect output or a crash
+
+
 #------ Global Attributes
 title              example_title
 author             example_author
