--- a/tests/example/files.in
+++ b/tests/example/files.in
@@ -7,7 +7,7 @@
 #--- Files for netCDF-related inputs
 Input_nc/files_nc.in
 Input_nc/desc_nc.in
-Input_nc/SW2_netCDF_output_variables.csv
+Input_nc/SW2_netCDF_output_variables.tsv
 
 #--- Constant (between simulation runs) temporal description of the simulation
 Input/domain.in
