Use a DrylandEcology fork of pcg
- branch "feature_sw2" of the DrylandEcology fork of pcg contains a commit that "Fix[es] function declaration without a prototype"

- close #353 "clang strict-prototypes warnings"

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = main
 [submodule "pcg"]
 	path = external/pcg
-	url = https://github.com/imneme/pcg-c-basic
-        branch = master
+	url = https://github.com/DrylandEcology/pcg-c-basic
+        branch = feature_sw2
