--- a/.github/workflows/main_win.yml
+++ b/.github/workflows/main_win.yml
@@ -44,3 +44,9 @@ jobs:
 
     - name: Unit tests (shuffle and repeat 3x)
       run: make clean test_rep3rnd
+
+    - name: Compile as library for STEPWAT2
+      run: CPPFLAGS='-DSTEPWAT' sw_sources='SW_Output_outarray.c SW_Output_outtext.c' make clean lib
+
+    - name: Compile as library for rSOILWAT2
+      run: CPPFLAGS='-DRSOILWAT' CFLAGS='-Iexternal/Rmock' sw_sources='SW_Output_outarray.c' make clean libr
