Simplify compilation as library
- make targets now include all SOILWAT2 source files, i.e., other repositories no longer need to know which files to pass via "sw_sources"

- fix preprocessor #ifdef blocks

- update GHAs: remove "sw_sources" when compiling as library

--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -50,10 +50,11 @@ jobs:
       run: make clean test_sanitizer
 
     - name: Compile as library for STEPWAT2
-      run: CPPFLAGS='-DSTEPWAT' sw_sources='SW_Output_outarray.c SW_Output_outtext.c' make clean lib
+      run: CPPFLAGS='-DSTEPWAT' make clean lib
 
     - name: Compile as library for rSOILWAT2
-      run: CPPFLAGS='-DRSOILWAT' CFLAGS='-Iexternal/Rmock' sw_sources='SW_Output_outarray.c' make clean libr
+      # Rmock/ provides bare-bones headers of R C-API functions required by SOILWAT2
+      run: CPPFLAGS='-DRSOILWAT' CFLAGS='-Iexternal/Rmock' make clean libr
 
 
   build_ncSW2:
