Overhauled scripts for comprehensive checks
- tools/check_functionality.sh -- collection of functions that are useful for various checks of SOILWAT2 (that are used by other scripts or can be directly utilized)
- tools/check_withCompilers.sh -- (renamed from check_SOILWAT2.sh) runs checks for several different compilers (based on macports)
- tools/check_outputModes.sh -- (renamed from run_compare_outputs.sh) runs and compares text-based, nc-based, and R-based SOILWAT2 outputs

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@
 # Figures created by scripts in tools/
 /tools/Fig*
 /tools/*.pdf
+/tools/figures/
+/tools/figures*
 
 # Google unit test output
 gtest-*.o
