Our clang-tidy setup requires >= v17
- "tools/run_tidy.sh" now checks clang-tidy version number and fails if < v17
- gha workflow "clang-tidy-check.yml" now runs on ubuntu-24.04 that should have clang v18

--- a/.github/workflows/clang-tidy-check.yml
+++ b/.github/workflows/clang-tidy-check.yml
@@ -1,5 +1,8 @@
 name: clang-tidy check
 
+# ubuntu-24.04 comes with clang v18 as default
+# ubuntu-latest as of 2024-Aug-01 points to ubuntu-22.04 with clang v14
+
 on:
   push:
     branches: [master, main, release/**]
@@ -9,13 +12,13 @@ on:
 jobs:
   formatting-check:
     name: Tidy Check
-    runs-on: ubuntu-latest
-      
+    runs-on: ubuntu-24.04
+
     steps:
     - name: Checkout repository and submodules
       uses: actions/checkout@v4
       with:
         submodules: recursive
-      
+
     - name: Run
       run: ./tools/run_tidy.sh
