Fix GHA clang-tidy-check: install netCDF-c and udunits2
- running clang-tidy for nc-based SOILWAT2 requires netCDF-c and udunits2

--- a/.github/workflows/clang-tidy-check.yml
+++ b/.github/workflows/clang-tidy-check.yml
@@ -20,5 +20,10 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install netCDF-C and udunits2
+      run: |
+        sudo apt-get update
+        sudo apt-get install libnetcdf-dev libudunits2-dev
+
     - name: Run
       run: ./tools/run_tidy.sh
