New input - `deflateLevel` & custom chunking
- Addresses issue #425
- Previously, when outputting to netCDFs, the bigger the domain, the longer it took to write output after every simulation run

- Created a new output within `Input_nc/desc.in` - "deflateLevel" that specifies the level of deflation that will be sent into `nc_def_var_deflate()`
	* If the value is 0 (default), variables will not have any kind of deflation
	* Otherwise, the values 1-9 specify the intensity of deflation that will occur
- New variable within SW_NETCDF to hold this new input - set to 0 in `SW_NC_init_ptrs()`

- Added custom chunking to every non-dimensional variable (e.g., variables that are not time, vert, lat/lon, x/y, etc.)
	* Previously, the deflation would provide chunk sizes that encompass the entire domain
		- E.g., chunk size = [10, 10, 366] for a variable with xy = 10 x 10 sites and time = one leap year
		- The preferred chunk size for the example above should be chunk size = [1, 1, 366]

- New function - `writeDummyVal` which is used to write a dummy value to a variable within the given netCDF and detects which type to write
	* Only use if `deflateLevel` is 0

--- a/tests/example/Input_nc/desc_nc.in
+++ b/tests/example/Input_nc/desc_nc.in
@@ -52,3 +52,4 @@ proj_false_northing                0
 #------ Output file information
 strideOutYears   20                 # Specifies the number of years to put into a single output netCDF -- may be 1, X (e.g., 10), or "Inf" (all years in one file), defaults to "Inf" if this line is not found
 baseCalendarYear 1980
+deflateLevel     0                  # Specifies how much output files will be deflated - may be 0 (off) or 1-9 (intensity of deflation), defaults to 0 if this line is not found
