Compile flag shortcuts for nc-based and txt-based SOILWAT2
`make CPPFLAGS=-DSWNC`

is equivalent to `make CPPFLAGS='-DSWNETCDF -DSWUDUNITS'`

and `make CPPFLAGS=-DSWTXT` is equivalent to `make`

--- a/.github/workflows/main_nix.yml
+++ b/.github/workflows/main_nix.yml
@@ -71,11 +71,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install libnetcdf-dev libudunits2-dev
 
-    - name: Build binary with netCDF support
-      run: CPPFLAGS=-DSWNETCDF make clean all
-
     - name: Build binary with netCDF and udunits2 support
-      run: CPPFLAGS='-DSWNETCDF -DSWUDUNITS' make clean all
+      run: CPPFLAGS=-DSWNC make clean all
 
 
 
