--- a/tests/example/files.in
+++ b/tests/example/files.in
@@ -5,7 +5,7 @@
 # USER: change path and file names as suitable for own application
 
 #--- Files for netCDF-related inputs
-Input_nc/files_nc.in
+Input_nc/SW2_netCDF_input_variables.tsv
 Input_nc/desc_nc.in
 Input_nc/SW2_netCDF_output_variables.tsv
 
