--- a/tests/example/Input_nc/desc_nc.in
+++ b/tests/example/Input_nc/desc_nc.in
@@ -53,3 +53,12 @@ proj_false_northing                0
 strideOutYears   20                 # Specifies the number of years to put into a single output netCDF -- may be 1, X (e.g., 10), or "Inf" (all years in one file), defaults to "Inf" if this line is not found
 baseCalendarYear 1980
 deflateLevel     0                  # Specifies how much output files will be deflated - may be 0 (off) or 1-9 (intensity of deflation), defaults to 0 if this line is not found
+
+#------ Spatial axes
+geo_XAxisName       lon     # name of x-axis dimension and variable ("geographic" CRS)
+geo_YAxisName       lat     # name of y-axis dimension and variable ("geographic" CRS)
+
+proj_XAxisName      x       # name of x-axis dimension and variable (used if primary_crs is "projected")
+proj_YAxisName      y       # name of y-axis dimension and variable (used if primary_crs is "projected")
+
+siteName            site    # name of discrete sites/stations (used if s-domain)
