Soil organic matter influence on soil water retention
Close #397

The implemented approach has two steps:
1) Determine organic matter properties for the soil layers assuming fibric peat characteristics at the soil surface and characteristics of sapric peat at a user-specified depth (with a default of 50 cm).
2) Estimate bulk soil parameters of the soil water retention curve as linear combinations of properties for the mineral soil component and of properties for the organic matter soil component using the proportion of organic matter in the bulk soil as weights.

New inputs
* siteparam.in: depthSapric
* soils.in: fractionWeight_om
* swrc_params*.in: swrcpOM[fibric], swrcpOM[sapric]

New functions
* interpolateFibricSapric() to linearly interpolate organic matter parameter between fibric and sapric characteristics
* SWRC_bulkSoilParameters() to calculate parameters of the bulk soil are as the weighted average of parameters of the organic and mineral components

Functions with new arguments/behavior
* SW_SIT_read() now reads in value for depthSapric from "siteparam.in"
* SW_LYR_read() now reads in values for fractionWeight_om from "soils.in"
* SW_SWRC_read() now reads in values for swrcpOM[fibric] and swrcpOM[sapric] from "swrc_params*.in"
* SW_SIT_init_run() now runs checks for swrcpOM[fibric] and swrcpOM[sapric] and
calculates bulk soil SWRCp from organic and mineral soil components via a call to SWRC_bulkSoilParameters()
* SW_swcBulk_saturated() gained argument `"fom"` which is passed on to PTF_Saxton2006() if legacy `"Cosby1984AndOthers"` is selected as PTF
* SW_swcBulk_minimum() and ui_theta_min() gained argument `"fom"` which is passed on to PTF_RawlsBrakensiek1985() if legacy `"Cosby1984AndOthers"` is selected as PTF
* PTF_Saxton2006() gained argument `"fom"` and throws an error if
fom > 0.08 (these published equations incorporate influence of organic matter up to 8% which was previously fixed at 0%)
* PTF_RawlsBrakensiek1985() gained argument `"fom"` and throw

--- a/tests/example/Input/siteparam.in
+++ b/tests/example/Input/siteparam.in
@@ -82,6 +82,11 @@ RCP85
 0
 
 
+# --- Organic matter ---
+# Depth [cm] at which characteristics of organic matter have completely switched from fibric to sapric peat
+50
+
+
 #--- Soil water retention curve (SWRC) ------
 #
 # Implemented options (`swrc_name`/`ptf_name`, see `swrc2str[]`/`ptf2str[]`):
@@ -99,7 +104,7 @@ Campbell1974				# Specify soil water retention curve
 Cosby1984AndOthers	# Specify pedotransfer function
 										# (if not implemented, then provide SWRC parameters via "swrc_params.in")
 
-0			# Has SWRC parameters (see `has_swrcp`)?
+0			# Has SWRC parameters for the mineral soil component (see `has_swrcp`)?
 			#    0: Estimate with specified pedotransfer function
 			#    1: Use values from "swrc_params.in"
 
