--- a/tests/example/Input/soils.in
+++ b/tests/example/Input/soils.in
@@ -15,18 +15,19 @@
 #   - imperm = (frac, 0-1) proportion of 'impermeability' to water
 #     percolation(/infiltration/drainage)
 #   - soiltemp = (C) initial temperature
+#   - %om = (frac, 0-1) proportion of organic matter by weight
 
 # USER: the evco and trco columns must sum to 1.0 or they will be normalized.
 
 # The minimum number of soil layers is 1 and the maximum number is `MAX_LAYERS`
 # which is defined in `SW_Defines.h`.
 
-# depth    matricd    gravel_content    evco    trco_grass    trco_shrub    trco_tree    trco_forb    %sand    %clay    imperm    soiltemp
-  5.0      1.430      0.100          0.813        0.0496         0.134       0.0496        0.134    0.510    0.150     0.000      -1.000
- 10.0      1.410      0.100          0.153        0.0495         0.094       0.0495        0.094    0.440    0.260     0.000      -1.000
- 20.0      1.390      0.100          0.034        0.1006         0.176       0.1006        0.176    0.350    0.410     0.000      -1.000
- 30.0      1.390      0.100          0.000        0.1006         0.175       0.1006        0.175    0.320    0.450     0.000      -1.000
- 40.0      1.380      0.200          0.000        0.1006         0.110       0.1006        0.110    0.310    0.470     0.000       0.000
- 60.0      1.150      0.200          0.000        0.1997         0.109       0.1997        0.109    0.320    0.470     0.000       0.000
- 80.0      1.310      0.200          0.000        0.1997         0.101       0.1997        0.101    0.570    0.280     0.000       1.000
-100.0      1.310      0.200          0.000        0.1997         0.101       0.1997        0.101    0.570    0.280     0.000       1.000
+# depth    matricd    gravel_content    evco    trco_grass    trco_shrub    trco_tree    trco_forb    %sand    %clay    imperm    soiltemp   %om
+  5.0      1.430      0.100          0.813        0.0496         0.134       0.0496        0.134    0.510    0.150     0.000      -1.000     0.0
+ 10.0      1.410      0.100          0.153        0.0495         0.094       0.0495        0.094    0.440    0.260     0.000      -1.000     0.0
+ 20.0      1.390      0.100          0.034        0.1006         0.176       0.1006        0.176    0.350    0.410     0.000      -1.000     0.0
+ 30.0      1.390      0.100          0.000        0.1006         0.175       0.1006        0.175    0.320    0.450     0.000      -1.000     0.0
+ 40.0      1.380      0.200          0.000        0.1006         0.110       0.1006        0.110    0.310    0.470     0.000       0.000     0.0
+ 60.0      1.150      0.200          0.000        0.1997         0.109       0.1997        0.109    0.320    0.470     0.000       0.000     0.0
+ 80.0      1.310      0.200          0.000        0.1997         0.101       0.1997        0.101    0.570    0.280     0.000       1.000     0.0
+100.0      1.310      0.200          0.000        0.1997         0.101       0.1997        0.101    0.570    0.280     0.000       1.000     0.0
