--- a/tests/example/Input/swrc_params_FXW.in
+++ b/tests/example/Input/swrc_params_FXW.in
@@ -1,7 +1,6 @@
 #------ Input for Soil Water Retention Curves (by soil layer) ------
 
-# A table with up to `MAX_LAYERS` rows (soil layers) and 6 columns:
-#   - the soil layers must match `soils.in`
+# Tables with 6 columns:
 #   - the interpretation of columns (SWRC parameters) depends on the
 #     selected SWRC (see `siteparam.in`)
 #   - unused columns are ignored (if selected SWRC uses fewer than 6 parameters)
@@ -15,6 +14,19 @@
 #   * param6 = L, tortuosity/connectivity parameter [-]
 
 
+# Table with two sets of six SWRC parameters
+#   * first set (row): characteristics of fibric peat
+#   * second set (row): characteristics of sapric peat
+#   * source: Letts et al. 2000, doi:10.1080/07055900.2000.9649643
+#       * Note: values for the van Genuchten SWRC assumed for
+#         comparable parameters; however, param4 (m) and param6 (L) are missing
+# param1  param2   param3   param4     param5   param6
+    0.93   0.08       1.9   NaN      2419.2     NaN
+    0.83   0.003      1.6   NaN         0.864   NaN
+
+
+# Table with six SWRC parameters for up to `MAX_LAYERS` rows (soil layers)
+#   * the soil layers must match `soils.in`
 # param1 param2   param3   param4   param5     param6
 0.437461 0.050757 1.247689 0.308681  22.985379 2.697338
 0.452401 0.103033 1.146533 0.195394  89.365566 2.843288
