--- a/tests/example/Input/siteparam.in
+++ b/tests/example/Input/siteparam.in
@@ -78,6 +78,9 @@ RCP85
 
 
 # --- Soil characterization ---
+# Is the soil layer depth profile and number of soil layers identical (1) across the entire domain or do they vary among sites/gridcells (0)?
+0
+
 # Are inputs of density representing bulk soil (type 1) or the matric component (type 0)?
 0
 
