Full documentation of units for weather-related variables
- each attribute of structs SW_WEATHER_NOW, SW_WEATHER_HIST, and SW_SKY are now documented with units
- clarify internal units of specific humidity (mass of water vapor in unit mass of moist air) [g kg-1]
- add comment that specify the correct units in read_weather_hist()
- checkAllWeather() now warns if relative humidity is within 0-1

--- a/tests/example/Input/weathsetup.in
+++ b/tests/example/Input/weathsetup.in
@@ -38,7 +38,7 @@
 0			# Relative humidity [%]
 0			# Maximum relative humidity [%]
 0			# Minimum relative humidity [%]
-0			# Specific humidity [%]
+0			# Specific humidity [g kg-1]
 0			# Dew point temperature [C]
 0			# Actual vapor pressure [kPa]
 0			# Downward surface shortwave radiation (see `Daily weather input descriptions`)
