--- a/tests/example/Input/siteparam.in
+++ b/tests/example/Input/siteparam.in
@@ -114,9 +114,8 @@ Cosby1984AndOthers	# Specify pedotransfer function
 
 #---- Transpiration regions
 # ndx  : 1=shallow, 2=medium, 3=deep, 4=very deep
-# layer: deepest soil layer number of the region.
-#        Must agree with soil layers as defined in `soils.in`
-#	ndx	layer
-	1	3
-	2	5
-	3	8
+# region depth (cm): depth from soil surface to bottom of a transpiration region
+#	ndx	depth (cm)
+	1	20
+	2	40
+	3	100
