Clarify soil layers, depth, and width/thickness in nc-mode
- Expanded documentation including hasConsistentSoilLayerDepths, nMaxSoilLayers, nMaxEvapLayers and depthsAllSoilLayers

- Clarification of how soil layer number is determined from nc-inputs:
    * txt-mode: layers provided in "soils.in" and "swrc_params.in"
    * nc-mode: the first n layers with depth and width/thickness that are neither zero nor missing (if provided as input)

- Clarification of the implications of `hasConsistentSoilLayerDepths` in nc-mode --> "siteparam.in" has now improved comments
    * if depth/thickness of soil layers vary among sites/gridcells, then soils are only created from nc-inputs; nc-outputs use soil layers as vertical axis
    * if depth/thickness of soil layers is constant among sites/gridcells (number of soil layers may vary), then nc-inputs complement the soil information from text inputs but text inputs must contain the the maximum number of soil layers; nc-outputs use soil layer depths as vertical axis

- get_invar_information() no longer checks that size of the vertical dimension is consistent across soil nc-inputs if `hasConsistentSoilLayerDepths` -- this is now replaced with checks by SW_NCIN_soilProfile() and read_soil_inputs() with finer control

- SW_NCIN_soilProfile() gains arguments "numSoilVarLyrs", "default_n_layers", and "default_depths" and loses "ncInFiles"
    * No need anymore to read from nc files because relevant information, i.e., size of the vertical dimension, has already been read by an earlier call to get_invar_information()
    * Determines nMaxSoilLayers depending on `hasConsistentSoilLayerDepths` (from text input "soils.in" or from nc-inputs "soilLayerDepths" or "soilLayerWidths")
    * Checks that sufficient soil layers are provided by inputs

- get_nconsistent_soil_layers() and get_max_inconsistent_soil_layers() are no longer necessary because relevant information, i.e., size of the vertical dimension, is read by an earlier call to get_invar_in

--- a/tests/example/Input/siteparam.in
+++ b/tests/example/Input/siteparam.in
@@ -78,8 +78,24 @@ RCP85
 
 
 # --- Soil characterization ---
-# Is the soil layer depth profile and number of soil layers identical (1) across the entire domain or do they vary among sites/gridcells (0)?
-1
+# Simulated soil layer number determination:
+#   txt-mode: layers provided in "soils.in" and "swrc_params.in"
+#   nc-mode:  the first n layers with depth and width/thickness that are
+#             neither zero nor missing (if provided as input)
+
+1   # 0 = depth/thickness of soil layers vary among sites/gridcells
+    #     nc-mode: Vertical axis of outputs represents soil layers (units "1").
+    #              The soil is created from netCDF inputs; thus, all required
+    #              soil properties must be provided as netCDF inputs.
+    #
+    # 1 = depths/thickness of soil layers are equal among sites/gridcells
+    #     nc-mode: Vertical axis of outputs represents soil depth (units "cm").
+    #              The soil is based on text input files
+    #              ("soils.in" and "swrc_params.in"); soil properties provided
+    #              as netCDF inputs replace the values from the text inputs.
+    #              Thus, the soil input text files must contain the
+    #              maximum number of soil layers and the same depths/thickness
+    #              as netCDF soil inputs.
 
 # Are inputs of density representing bulk soil (type 1) or the matric component (type 0)?
 0
