Complete example inputs for nc-mode
- Running SOILWAT2 for the test example with txt-mode or nc-mode should result in identical output values (see `tools/check_outputModes.sh`)

- "SW2_netCDF_input_variables.tsv": tab-separated spreadsheet for the user to provide necessary information to obtain inputs from netCDFs for each SOILWAT2 input variable
    * SW_NCIN_read_input_vars() is reading the spreadsheet
    * The values of column "SW2 input group" are matched against "expectedColNames" from SW_netCDF_input.c
    * The values of column "SW2 variable" are matched against "possVarNames" from SW_netCDF_input.c
    * The values of column "SW2 units" are matched against "swInVarUnits" from SW_netCDF_input.c

- New netCDFs that provide inputs for the example (climate, weather, soils, vegetation, topography); they are designed to contain the same information as the text input files

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,12 @@
 *-Ex.R
 /Debug/
 
-# Test project output
+# Files produced by example run
 /tests/example/Output/*
 /tests/example/Output_*
-
+/tests/example/Input_nc/domain.nc
+/tests/example/Input_nc/progress.nc
+/tests/example/Input_nc/*/index_*.nc
 
 # Figures created by scripts in tools/
 /tools/Fig*
