--- a/tests/example/Input/siteparam.in
+++ b/tests/example/Input/siteparam.in
@@ -119,13 +119,15 @@ RCP85
 # Note: option "Campbell1974"/"Cosby1984AndOthers" was hard-coded < v7.0.0
 # Note: `rSOILWAT2` may implement additional PTFs
 
-Campbell1974				# Specify soil water retention curve
-Cosby1984AndOthers	# Specify pedotransfer function
-										# (if not implemented, then provide SWRC parameters via "swrc_params.in")
+Campbell1974        # Specify soil water retention curve
+Cosby1984AndOthers  # Specify pedotransfer function
+                    #   * if not implemented, then provide SWRC parameters
+                    #     as inputs via "swrc_params.in" and/or "swrcp.nc")
 
-0			# Has SWRC parameters for the mineral soil component (see `has_swrcp`)?
-			#    0: Estimate with specified pedotransfer function
-			#    1: Use values from "swrc_params.in"
+0                   # Are SWRC parameters for the mineral soil component
+                    # provided as inputs (see `has_swrcp`)?
+                    #   0: Estimate with specified pedotransfer function
+                    #   1: Use inputs from "swrc_params.in" and/or "swrcp.nc"
 
 
 #---- Transpiration regions
