Effects on surface temperature
Surface temperature extremes are now less sensitive to high biomass, and average surface temperature is now more consistent with daily extremes.

- biomass (or absence of biomass) can have a moderating (or exaggerating) effect on surface temperature (tgs)
- implemented equations now consider applicable range
-> previously, large biomass values resulted in (i) very large tgsmin that exceeded values for tgsmax and in (ii) large negative average tgs

To address #440:
* surface_temperature() now uses biomass capped at 550 g/m2 to estimate tgsmin and tgsmax
* a biomass limit of 550 g/m2 was selected because it is the value at which cooling and heating effects of biomass on minimum and maximum surface temperature resulted, averaged across many conditions, in no change for mean surface temperature based on the implemented equations
* surface_temperature() now limits effects of maximum air temperature on maximum surface temperature to air temperatures above freezing.
* surface_temperature() now sets minimum and maximum surface temperature to the average of the two values (with a warning) if the initial estimate of minimum surface temperature is larger than the initial estimate of maximum surface temperature
* surface_temperature() now checks that tgsmax >= tgs >= tgsmin
* the new default method to estimate average daily surface temperature is now based on Parton 1984 (previously Parton 1978)
* the previous method (Parton 1978) can be selected via the new user input "methodSurfaceTemperature"

- new "methodSurfaceTemperature":
* new input via `"siteparam.in"` to select the method for estimating surface temperature (with a new default)
* surface_temperature() gained argument "method"
* soil_temperature() gained argument "methodSurfaceTemperature" which is passed on to surface_temperature()

New unit tests for surface_temperature()

Updated NEWS

--- a/tests/example/Input/siteparam.in
+++ b/tests/example/Input/siteparam.in
@@ -54,7 +54,7 @@
 .5		# inflection point
 1.1		# range
 
-#---- Soil temperature
+#---- Surface and soil temperature
 # from Parton 1978, ch. 2.2.2 Temperature-profile Submodel
 300.		# biomass limiter, 300 g/m^2 in Parton's equation for T1(avg daily temperature at the top of the soil)
 15.		# constant for T1 equation (used if biomass <= biomass limiter), 15 in Parton's equation
@@ -67,6 +67,9 @@
 15.		# deltaX parameter for soil_temperature function, default is 15.  (distance between profile points in cm)  max depth (the next number) should be evenly divisible by this number
 990.		# max depth for the soil_temperature function equation, default is 990.  this number should be evenly divisible by deltaX
 1		# flag, 1 to calculate soil_temperature, 0 to not calculate soil_temperature
+1       # Method for average surface temperature:
+        #     0, default prior to v8.1.0 (Parton 1978)
+        #     1, default since v8.1.0 (Parton 1984)
 
 # ---- CO2 Settings ----
 # Activate (1) / deactivate (0) biomass multiplier
